--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "yarn run watch:css && react-scripts start",
-    "build": "yarn run build:css && react-scripts build && cp ./_redirects ./build",
+    "build": " react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:css": "postcss src/styles/tailwind.css -o src/styles/app.css",
